// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card button is not rendered if a card has the href property set 1`] = `
<div
  className="mfui-beta-card mfui-beta-card_href"
>
  <Link
    className="mfui-beta-card__inner"
    href="card-href"
  >
    <div
      className="mfui-beta-card__pic-wrapper"
    >
      <test-file-stub
        style={
          Object {
            "display": "block",
            "fill": "#00B956",
          }
        }
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Cмартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <Paragraph
      hasMargin={false}
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </Paragraph>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <span
        className="mfui-beta-card__fake-link"
      >
        Подключить
      </span>
    </div>
  </Link>
</div>
`;

exports[`Card disable left align if there is a button and link 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <div
      className="mfui-beta-card__pic-wrapper mfui-beta-card__pic-wrapper_object-fit_fill mfui-beta-card__pic-wrapper_img"
    >
      <img
        className="mfui-beta-card__img"
        src="test-file-stub"
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Cмартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <Paragraph
      hasMargin={false}
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </Paragraph>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <Button
        className="mfui-beta-card__button"
        href="#"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-beta-card__link"
        color="blue"
        href="#"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card left align of the interactive element 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <div
      className="mfui-beta-card__pic-wrapper mfui-beta-card__pic-wrapper_object-fit_fill mfui-beta-card__pic-wrapper_img"
    >
      <img
        className="mfui-beta-card__img"
        src="test-file-stub"
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Cмартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <Paragraph
      hasMargin={false}
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </Paragraph>
    <div
      className="mfui-beta-card__btns-wrapper mfui-beta-card__btns-wrapper_left-align"
    >
      <TextLink
        className="mfui-beta-card__link"
        color="blue"
        href="#"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render component 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <div
      className="mfui-beta-card__pic-wrapper mfui-beta-card__pic-wrapper_object-fit_fill mfui-beta-card__pic-wrapper_img"
    >
      <img
        className="mfui-beta-card__img"
        src="test-file-stub"
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Cмартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <Paragraph
      hasMargin={false}
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </Paragraph>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <Button
        className="mfui-beta-card__button"
        href="#"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-beta-card__link"
        color="blue"
        href="#"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render component with icon 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <div
      className="mfui-beta-card__pic-wrapper"
    >
      <test-file-stub
        style={
          Object {
            "display": "block",
            "fill": "#00B956",
          }
        }
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Cмартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <Paragraph
      hasMargin={false}
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </Paragraph>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <Button
        className="mfui-beta-card__button"
        href="#"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-beta-card__link"
        color="blue"
        href="#"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render component with img, if image source and svg source are specified 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <div
      className="mfui-beta-card__pic-wrapper mfui-beta-card__pic-wrapper_object-fit_fill mfui-beta-card__pic-wrapper_img"
    >
      <img
        className="mfui-beta-card__img"
        src="test-file-stub"
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Cмартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <Paragraph
      hasMargin={false}
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </Paragraph>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <Button
        className="mfui-beta-card__button"
        href="#"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-beta-card__link"
        color="blue"
        href="#"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render with a single interactive button element 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <div
      className="mfui-beta-card__pic-wrapper"
    >
      <test-file-stub
        style={
          Object {
            "display": "block",
            "fill": "#00B956",
          }
        }
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Cмартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <Paragraph
      hasMargin={false}
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </Paragraph>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <Button
        className="mfui-beta-card__button"
        href="#"
      >
        Подробнее
      </Button>
    </div>
  </div>
</div>
`;

exports[`Card render with a single interactive link element 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <div
      className="mfui-beta-card__pic-wrapper"
    >
      <test-file-stub
        style={
          Object {
            "display": "block",
            "fill": "#00B956",
          }
        }
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Cмартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <Paragraph
      hasMargin={false}
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </Paragraph>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <TextLink
        className="mfui-beta-card__link"
        color="blue"
        href="#"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render with contain object fit 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <div
      className="mfui-beta-card__pic-wrapper mfui-beta-card__pic-wrapper_object-fit_contain mfui-beta-card__pic-wrapper_img"
    >
      <img
        className="mfui-beta-card__img"
        src="test-file-stub"
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Cмартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <Paragraph
      hasMargin={false}
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </Paragraph>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <Button
        className="mfui-beta-card__button"
        href="#"
      >
        Подробнее
      </Button>
    </div>
  </div>
</div>
`;

exports[`Card render with fullHeight 1`] = `
<div
  className="mfui-beta-card mfui-beta-card_full-height"
>
  <div
    className="mfui-beta-card__inner"
  >
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Cмартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <Paragraph
      hasMargin={false}
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </Paragraph>
    <div
      className="mfui-beta-card__btns-wrapper"
    />
  </div>
</div>
`;

exports[`Card render with link on the card 1`] = `
<div
  className="mfui-beta-card mfui-beta-card_href"
>
  <Link
    className="mfui-beta-card__inner"
    href="card-href"
  >
    <div
      className="mfui-beta-card__pic-wrapper"
    >
      <test-file-stub
        style={
          Object {
            "display": "block",
            "fill": "#00B956",
          }
        }
      />
    </div>
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Cмартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <Paragraph
      hasMargin={false}
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </Paragraph>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <span
        className="mfui-beta-card__fake-link"
      >
        Подключить
      </span>
    </div>
  </Link>
</div>
`;

exports[`Card render without img and svg 1`] = `
<div
  className="mfui-beta-card"
>
  <div
    className="mfui-beta-card__inner"
  >
    <Header
      as="h3"
      className="mfui-beta-card__title"
      color="black"
      hAlign="inherit"
    >
      Cмартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <Paragraph
      hasMargin={false}
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </Paragraph>
    <div
      className="mfui-beta-card__btns-wrapper"
    >
      <Button
        className="mfui-beta-card__button"
        href="#"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-beta-card__link"
        color="blue"
        href="#"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;
